--- a/src/assets/styles/components/_expensedashboard.scss
+++ b/src/assets/styles/components/_expensedashboard.scss
@@ -1,7 +1,6 @@
 .expensedashboard{
-    &__title{
-        text-align: center;
-        padding:0.2rem 0rem;
-        margin:0;
+
+    &__buttonlayout{
+        text-align: right;
     }
 }
