--- a/src/assets/styles/components/_main.scss
+++ b/src/assets/styles/components/_main.scss
@@ -8,3 +8,12 @@
     background: $secondary-color;
     border:1px solid $secondary-color;
 }
+
+.ReactTable .rt-thead.-filters input, .ReactTable .rt-thead.-filters select{
+    margin: 0;
+    padding:0;
+}
+
+.rt-th:first-child{
+    align-self: center;
+}
